syntax = "proto3";

package homework.v1;

option go_package = "./pkg/api";

import "google/protobuf/timestamp.proto";

// ==== SERVICE ====

service HomeworkService {
  // --- ASSIGNMENT ---
  rpc CreateAssignment(CreateAssignmentRequest) returns (Assignment);
  rpc UpdateAssignment(UpdateAssignmentRequest) returns (Assignment);
  rpc DeleteAssignment(DeleteAssignmentRequest) returns (Empty);

  rpc ListAssignmentsByTutor(ListAssignmentsByTutorRequest) returns (ListAssignmentsResponse);
  rpc ListAssignmentsByStudent(ListAssignmentsByStudentRequest) returns (ListAssignmentsResponse);
  rpc ListAssignmentsByPair(ListAssignmentsByPairRequest) returns (ListAssignmentsResponse);

  // --- SUBMISSION ---
  rpc CreateSubmission(CreateSubmissionRequest) returns (Submission);
  rpc ListSubmissionsByAssignment(ListSubmissionsByAssignmentRequest) returns (ListSubmissionsResponse);

  // --- FEEDBACK ---
  rpc CreateFeedback(CreateFeedbackRequest) returns (Feedback);
  rpc UpdateFeedback(UpdateFeedbackRequest) returns (Feedback);
  rpc ListFeedbacksByAssignment(ListFeedbacksByAssignmentRequest) returns (ListFeedbacksResponse);

  // --- FILES ---
  rpc GetAssignmentFile(GetAssignmentFileRequest) returns (HomeworkFileURL);
  rpc GetSubmissionFile(GetSubmissionFileRequest) returns (HomeworkFileURL);
  rpc GetFeedbackFile(GetFeedbackFileRequest) returns (HomeworkFileURL);

}

// ==== ENUM ====

enum AssignmentStatusFilter {
  ASSIGNMENT_STATUS_UNSPECIFIED = 0;
  UNSENT = 1;
  UNREVIEWED = 2;
  REVIEWED = 3;
  OVERDUE = 4;
}

// ==== REQUEST/RESPONSE ====

message Empty {}

message DeleteAssignmentRequest {
  string assignment_id = 1;
}

message CreateAssignmentRequest {
  string tutor_id = 1;
  string student_id = 2;
  optional string title = 3;
  optional string description = 4;
  optional string file_id = 5;
  optional google.protobuf.Timestamp due_date = 6;
}

message UpdateAssignmentRequest {
  string id = 1;
  optional string title = 2;
  optional string description = 3;
  optional string file_id = 4;
  optional google.protobuf.Timestamp due_date = 5;
}

message ListAssignmentsByTutorRequest {
  string tutor_id = 1;
  repeated AssignmentStatusFilter status_filter = 2;
}

message ListAssignmentsByStudentRequest {
  string student_id = 1;
  repeated AssignmentStatusFilter status_filter = 2;
}

message ListAssignmentsByPairRequest {
  string tutor_id = 1;
  string student_id = 2;
  repeated AssignmentStatusFilter status_filter = 3;
}

message ListAssignmentsResponse {
  repeated Assignment assignments = 1;
}

message CreateSubmissionRequest {
  string assignment_id = 1;
  optional string file_id = 2;
  optional string comment = 3;
}

message ListSubmissionsByAssignmentRequest {
  string assignment_id = 1;
}

message ListSubmissionsResponse {
  repeated Submission submissions = 1;
}

message CreateFeedbackRequest {
  string submission_id = 1;
  optional string file_id = 2;
  optional string comment = 3;
}

message UpdateFeedbackRequest {
  string id = 1;
  optional string file_id = 2;
  optional string comment = 3;
}

message ListFeedbacksByAssignmentRequest {
  string assignment_id = 1;
}

message ListFeedbacksResponse {
  repeated Feedback feedbacks = 1;
}

message GetAssignmentFileRequest {
  string assignment_id = 1;
}

message GetSubmissionFileRequest {
  string submission_id = 1;
}

message GetFeedbackFileRequest {
  string feedback_id = 1;
}

message HomeworkFileURL {
  string url = 1;
}

// ==== OUTPUT MODELS ====

message Assignment {
  string id = 1;
  string tutor_id = 2;
  string student_id = 3;
  optional string title = 4;
  optional string description = 5;
  optional string file_id = 6;
  optional google.protobuf.Timestamp due_date = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp edited_at = 9;
}

message Submission {
  string id = 1;
  string assignment_id = 2;
  optional string file_id = 3;
  optional string comment = 4;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp edited_at = 7;
}

message Feedback {
  string id = 1;
  string submission_id = 2;
  optional string file_id = 3;
  optional string comment = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp edited_at = 6;
}
